# cuda-bvh

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cpu/: CMakeLists.txt
inc/: bbox.h  bvh.h  camera.h  common.h  isect.h  material.h  ray.h  raytracer.h  scene.h  tris.h  vec.h
kernels/: bvh.cu  material.cu  raytracer.cu  scene.cu  tris.cu
src/: bvh.cpp  main.cpp  ray.cpp  scene.cpp
